# playground

./: .gitignore  README.md
ada/helloWorld/: flake.nix  hello_world.gpr  result
ada/hello_world/: alire.toml  flake.nix  hello_world.gpr
c/: flake.nix  justfile
c-cpp/: flake.nix
c-cpp/src/: hello.c
c/asm/: hello.asm
c/src/: hello.c
go/: default.nix  go.mod  main.go
go/golings/exercises/arrays/arrays2/: main.go
go/golings/exercises/functions/functions1/: main.go
go/golings/exercises/if/if1/: main_test.go
go/golings/exercises/if/if2/: main_test.go
go/golings/exercises/primitive_types/primitive_types2/: main.go
go/golings/exercises/primitive_types/primitive_types3/: main.go
go/golings/exercises/primitive_types/primitive_types4/: main.go
go/golings/exercises/slices/slices2/: main.go
go/golings/exercises/slices/slices3/: main.go
go/golings/exercises/slices/slices4/: main_test.go
go/golings/exercises/switch/switch3/: main_test.go
go/golings/exercises/variables/variables4/: main.go
go/lib/: uniqueChars.go
go/zig_from_go/: flake.nix  go.mod  main.go  main_test.go
go/zig_from_go/lib/: hello.zig
haskell/helloWorld/: flake.nix  hello-world.cabal
haskell/helloWorld/app/: Main.hs
haskell/helloWorld/book.realworldhaskell.org/read/: advanced-library-design-building-a-bloom-filter.html  barcode-recognition.html  bibliography.html  characters-strings-and-escaping-rules.html  code-case-study-parsing-a-binary-data-format.html  concurrent-and-multicore-programming.html  data-structures.html  defining-types-streamlining-functions.html  efficient-file-processing-regular-expressions-and-file-name-matching.html  error-handling.html  extended-example-web-client-programming.html  functional-programming.html  getting-started.html  gui-programming-with-gtk-hs.html  hs.index.html  index.html  installing-ghc-and-haskell-libraries.html  interfacing-with-c-the-ffi.html  io-case-study-a-library-for-searching-the-filesystem.html  io.html  monad-transformers.html  monads.html  profiling-and-optimization.html  programming-with-monads.html  sockets-and-syslog.html  software-transactional-memory.html  systems-programming-in-haskell.html  testing-and-quality-assurance.html  types-and-functions.html  using-databases.html  using-parsec.html  using-typeclasses.html  web-site-and-comment-system-usage-and-policies.html  why-functional-programming-why-haskell.html  writing-a-library-working-with-json-data.html
misc/: flake.nix
misc/myTauriApp/: rust-toolchain.toml
misc/tauri/myTauriApp/: package-lock.json  package.json
misc/tauri/myTauriApp/src-tauri/: tauri.conf.json
ocaml/: dune  flake.nix
ocaml/_build/: .db  .digest-db  log
ocaml/_build/default/.dune/: configurator  configurator.v2
ocaml/_build/default/lib/.merlin-conf/: lib-ocaml
ocaml/_build/default/lib/.ocaml.objs/byte/: ocaml.cmt
ocaml/hello_world/: dune  dune-project  flake.nix
odin/helloWorld/: flake.nix
python/orders-summary-python/: flake.nix  report.py
reverse/picoCTF/armssembly0/: README.md  chall.S
rust/: flake.nix
rust/async_cooking/: Cargo.toml
rust/async_cooking/src/: main.rs
rust/async_rust_book/: Cargo.toml  flake.nix
rust/axum/: .gitignore  Cargo.toml  flake.nix
rust/axum/src/: main.rs
rust/bevy_hello/: Cargo.toml  flake.nix
rust/bevy_hello/src/: main.rs
rust/bindgen/: Cargo.toml  build.rs  compass_dir.c  compass_dir.h  default.nix  doggo.h  flake.nix  wrapper.h
rust/bindgen/build_helpers/: rename_callbacks.rs
rust/bindgen/src/: compass.rs  main.rs
rust/ble/: Cargo.toml  README.md  flake.nix  result
rust/ble/src/: main.rs
rust/ble/tests/: integration.nix
rust/channels_and_proc_macros/: Cargo.toml  claude-review.md
rust/channels_and_proc_macros/src/: main.rs
rust/embassy-hello-world/: Cargo.toml  flake.nix
rust/embassy-hello-world/.cargo/: config.toml
rust/embassy-hello-world/src/: main.rs
rust/helloWorld/: Cargo.toml  flake.nix
rust/helloWorld/src/: main.rs
rust/helloWorld/src/cli/: main.rs
rust/jasonReview/: Cargo.toml  flake.nix
rust/jasonReview/src/cli/: main.rs
rust/jasonReview/src/plugin/: main.rs
rust/nrf52840-basic-ble/: Cargo.toml  flake.nix
rust/nrf52840-basic-ble/.cargo/: config.toml
rust/nrf52840-basic-ble/src/: main.rs
rust/nrf52840-blinky/: Cargo.toml  memory.x
rust/nrf52840-blinky/.cargo/: config.toml
rust/nrf52840-blinky/src/: main.rs
rust/nrf52840-devkit/src/: main.rs
rust/ratatui/: Cargo.toml  LICENSE  README.md  flake.nix
rust/ratatui/src/: main.rs
rust/ratatui/src/app/: input.rs  message.rs  mod.rs  model.rs  update.rs  view.rs
rust/ratatui/src/screens/: mod.rs
rust/ratatui/src/screens/logs/: mod.rs
rust/ratatui/src/screens/repl/: commands.rs  mod.rs
rust/rb_tree/: Cargo.toml  flake.nix
rust/security_events/: Cargo.toml  flake.nix
rust/security_events/src/: main.rs
rust/simple_lifetimes/: Cargo.toml  flake.nix
rust/simple_lifetimes/src/: main.rs
rust/singly_linked_list/src/: lib.rs
zig/cli11/: build.zig  build.zig.zon  flake.nix
zig/cli11/src/: main.zig
zig/dsa/: .gitignore  build.zig  flake.nix
zig/dsa/lib/: singlyLinkedList.zig
zig/dsa/src/: main.zig
zig/hello/: build.zig  build.zig.zon  flake.nix  hello
zig/hello/src/: main.zig
zig/raylib/: build.zig  build.zig.zon  flake.nix
zig/raylib/src/: main.zig
zig/rubiks/: build.zig  build.zig.zon  flake.nix
zig/rubiks/src/: cube_matrix.zig  main.zig
zig/ziglings/exercises/: 024_errors4.zig
