cabal-version: 2.2
name: hello-world
version: 0.1.0.0
synopsis: A simple Hello World application
description: A basic Hello World program written in Haskell
author: Your Name
maintainer: your.email@example.com
category: Application
build-type: Simple

executable hello-world
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5