[package]
name = "nrf52840-blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.10", default-features = false, features = ["platform-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-nrf      = { version = "0.10", default-features = false, features = ["nrf52840", "time-driver-rtc1", "defmt", "gpiote", "unstable-pac", "rt"] }
embassy-time     = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures  = { version = "0.1" }
nrf-sdc      = { version = "0.4", default-features = false, features = ["defmt", "peripheral", "nrf52840"] }
nrf-mpsl     = { version = "0.3", default-features = false, features = ["defmt", "critical-section-impl"] }
bt-hci       = { version = "0.8", default-features = false, features = ["defmt"] }
trouble-host = { git = "https://github.com/embassy-rs/trouble", features = ["derive", "gatt"] }

cortex-m    = { version = "0.7" }
cortex-m-rt = "0.7"
defmt       = "1.0"
defmt-rtt   = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"

[patch.crates-io]
nrf-sdc  = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "812a56e3411bc3ff850d354401d95221e1f4fb84" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "812a56e3411bc3ff850d354401d95221e1f4fb84" }

[profile.dev]
codegen-units = 1
debug         = true
incremental   = false
lto           = false
opt-level     = 1

[profile.release]
codegen-units = 1
debug         = true
lto           = true
opt-level     = "z"
