[package]
name = "nrf52840-blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-nrf      = { git = "https://github.com/embassy-rs/embassy", features = ["nrf52840", "time-driver-rtc1", "defmt", "gpiote"] }
embassy-time     = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-futures  = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync     = { git = "https://github.com/embassy-rs/embassy" }
cortex-m         = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt      = "0.7"
defmt            = "0.3"
defmt-rtt        = "0.4"
panic-probe      = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
codegen-units = 1
debug         = true
incremental   = false
lto           = false
opt-level     = 1

[profile.release]
codegen-units = 1
debug         = true
lto           = true
opt-level     = "z"
