[package]
name = "ratatui-hello-world"
version = "0.1.0"
description = "just playing around"
authors = ["Alec Lowry <accounts@aleclowry.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
ratatui-textarea = "0.9"
clap = "4.5"
shlex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
tui-logger = { version = "0.18", default-features = false, features = ["tracing-support", "crossterm"] }
log = "0.4"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
